--- a/confirm.html
+++ b/confirm.html
@@ -95,7 +95,7 @@
 
                 <div class="details-section">
                     <details>
-                        <summary>🗓️📍 Recordar detalles (fecha y lugar)</summary>
+                        <summary>🗓️📍 ¿Dónde y cuándo era este sarao?</summary>
                         <div class="details-content">
                             <p><strong>Fecha:</strong> 13 de septiembre de 2025 (desde las 13:00h)</p>
                             <p><strong>Lugar:</strong> La casita de Pinto, Madrid.</p>
