--- a/confirm.html
+++ b/confirm.html
@@ -122,7 +122,7 @@
             
             <div id="response-message"></div>
             <div class="info-text">
-                <p>Para ver <strong>todos los detalles</strong> de la boda (vestimenta, regalos, etc.) o si necesitas <strong>cambiar tu asistencia</strong>, por favor, <a href="http://bodahawaiana.gay" target="_blank">visita la web principal</a>.</p>
+                <p>Para ver <strong>todos los detalles</strong> de la boda (vestimenta, horarios, etc.) o si necesitas <strong>cambiar tu asistencia</strong>, por favor, <a href="http://bodahawaiana.gay" target="_blank">visita la web principal</a>.</p>
             </div>
         </div>
     </div>
